Fixes #12 by removing from the windowPane toolbar buttons the outline that overlaps other elements during the active state.

--- a/public/css/sass-modules/_panels.scss
+++ b/public/css/sass-modules/_panels.scss
@@ -41,6 +41,7 @@
                 cursor: pointer;
                 display: block;
                 height: (24rem/16);
+                overflow: hidden;
                 padding: 0;
                 position: relative;
                 text-indent: -1000rem;
